--- a/backend/pkg/mailer/template/index.html
+++ b/backend/pkg/mailer/template/index.html
@@ -76,7 +76,7 @@
           <br />
           Ваш код для подтверждения регистрации:
         </div>
-        <div class="code-container">1FA34S</div>
+        <div class="code-container">{{.Code}}</div>
         <div class="info-text">Код действует в течение 5 минут</div>
       </div>
       <div class="footer-text">
