--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,3 +28,11 @@ body {
 ::-webkit-scrollbar-track:hover {
   background: #555;
 }
+
+a {
+  margin-right: 16px;
+  margin-left: 16px;
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+}
