--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 html,
+#root {
+  width: 100%;
+  height: 100%;
+}
 body {
   font-family: "Commissioner", sans-serif;
   width: 100%;
